<resources>
    <string name="app_name">YourAnimeList</string>
    <string name="home">Home</string>
    <string name="anime_list">Anime</string>
    <string name="chara_list">Character</string>
</resources>