...
                            if (navBackStackEntry?.destination?.route == BottomNavScreen.HomeScreen.route) {
                                IconButton(onClick = {
                                    navController.navigate(Screen.SearchScreen.route)
                                }) {
                                    Icon(
                                        imageVector = Icons.TwoTone.Search,
                                        contentDescription = "home_screen_search"
                                    )
                                }
                            } else {
                                IconButton(onClick = {
                                    onSearchTriggered()
                                }) {
...
